# ghc

./: .gitignore  .mailmap  aclocal.m4  configure.ac  ghc.mk
compiler/: ghc.cabal.in  ghc.mk
compiler/basicTypes/: BasicTypes.hs  BasicTypes.lhs  Module.hs  Name.hs  OccName.hs  OccName.lhs  PatSyn.lhs  SrcLoc.hs
compiler/cmm/: CLabel.hs  Cmm.hs  CmmBuildInfoTables.hs  CmmCallConv.hs  CmmCommonBlockElim.hs  CmmExpr.hs  CmmInfo.hs  CmmLayoutStack.hs  CmmNode.hs  CmmParse.y  CmmPipeline.hs  CmmUtils.hs  PprC.hs  PprCmm.hs  PprCmmDecl.hs  PprCmmExpr.hs
compiler/codeGen/: StgCmmArgRep.hs  StgCmmBind.hs  StgCmmClosure.hs  StgCmmCon.hs  StgCmmForeign.hs  StgCmmHeap.hs  StgCmmLayout.hs
compiler/coreSyn/: CorePrep.lhs  CoreUnfold.hs  MkCore.hs
compiler/deSugar/: Coverage.hs  Desugar.hs  DsArrows.hs  DsExpr.hs  DsGRHSs.hs  DsListComp.hs  DsMeta.hs  DsUtils.lhs
compiler/ghci/: ByteCodeAsm.hs  ByteCodeGen.hs  (+10 more)
ghc/: GhciMonad.hs  InteractiveUI.hs  Main.hs  ghc-bin.cabal.in
includes/: Cmm.h  Rts.h  RtsAPI.h
iserv/: ghc.mk  iserv-bin.cabal
libraries/integer-gmp2/: .gitignore  integer-gmp2.cabal
rts/: Capability.c  Capability.h  CheckUnload.c  Compact.cmm  Hash.c  Hash.h  HeapStackCheck.cmm  Interpreter.c  Linker.c  LinkerInternals.h  Messages.c  PrimOps.cmm  Printer.c  ProfHeap.c  RetainerProfile.c  RtsAPI.c  RtsFlags.c  RtsStartup.c  RtsSymbols.c  STM.c  Schedule.c  Schedule.h  Stats.c  StgMiscClosures.cmm  StgPrimFloat.c  StgPrimFloat.h  Task.c  Task.h  Threads.c  Trace.h  ghc.mk  package.conf.in
rules/: build-prog.mk  distdir-way-opts.mk
testsuite/: .gitignore
(+175 files in other folders)
